[tool.poetry]
name = "nanoatp"
version = "0.3.1"
description = "A nano implementation of the AT Protocol (Authenticated Transfer Protocol) for Python."
license = "MIT"
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/susumuota/nanoatp"
repository = "https://github.com/susumuota/nanoatp"
documentation = "https://github.com/susumuota/nanoatp#readme"
keywords = ["atprotocol", "atproto", "bluesky"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9.16"
requests = "^2.28.2"
tld = "^0.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
