[project]
name = "nanoatp"
version = "0.5.1"
description = "A nano implementation of the AT Protocol for Python."
license = "MIT"
authors = [
    { name = "Susumu OTA", email = "1632335+susumuota@users.noreply.github.com" }
]
readme = "README.md"
keywords = ["atprotocol", "atproto", "bluesky"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "tld>=0.13",
]

[project.urls]
homepage = "https://github.com/susumuota/nanoatp"
repository = "https://github.com/susumuota/nanoatp"
documentation = "https://github.com/susumuota/nanoatp#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "pytest-watcher>=0.4.3",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
